--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <div id="WCAG2AAA.Principle3.Guideline3_1.3_1_2.H58.1.Lang">
-        <h1 lang="en">Hello! Good Doing</h1><p>Bonjour</p><p>
+        <h1 lang="eu">Hello! Good Doing</h1><p>Bonjour</p><p>
     </p></div>
     <div id="WCAG2AAA.Principle4.Guideline4_1.4_1_2.H91.InputEmail.Name">
-        <input id="trackemailid" type="email" placeholder="Enter Email" class="emailreset" aria-label="Enter Email">
+        <input id="trackemailid" type="email" placeholder="Enter Email" class="emailreset">
     </div>
     <div id="WCAG2AAA.Principle4.Guideline4_1.4_1_2.H91.InputImage.Name">
-        <input class="search_box_btn" id="searchsubmit" src="https://www.hsilgroup.com/wp-content/themes/hindware/images/search_btn.jpg" type="image" value="" alt="Tints and shades">
+        <input class="search_box_btn" id="searchsubmit" src="https://www.hsilgroup.com/wp-content/themes/hindware/images/search_btn.jpg" type="image" value="">
     </div>
     <div id="WCAG2AAA.Principle4.Guideline4_1.4_1_2.H91.InputPhone.Name">
-        <input id="c2c_phone" name="phone" onkeypress="return isNumber(event)" placeholder="Mobile Number" type="phone" aria-label="Mobile Number">
+        <input id="c2c_phone" name="phone" onkeypress="return isNumber(event)" placeholder="Mobile Number" type="phone">
     </div>
     <div id="WCAG2AAA.Principle4.Guideline4_1.4_1_2.H91.InputSearch.Name">
-        <input class="form-control" id="txtSearchText" name="q" placeholder="Type here to search..." type="search" aria-label="Type here to search...">
+        <input class="form-control" id="txtSearchText" name="q" placeholder="Type here to search..." type="search">
     </div>
     <div id="WCAG2AAA.Principle4.Guideline4_1.4_1_2.H91.InputNumber.Name">
-        <input class="phone focustext required" id="phone" maxlength="10" name="phone" onkeypress="return isNumberKey(this, this.value)" placeholder="Mobile No*" type="number" aria-label="Mobile No*">
+        <input class="phone focustext required" id="phone" maxlength="10" name="phone" onkeypress="return isNumberKey(this, this.value)" placeholder="Mobile No*" type="number">
     </div>
  <div id="WCAG2AAA.Principle1.Guideline1_3.1_3_1.F68">
-        <input class="form-control search-input" id="siteSearchText" name="siteSearchText" placeholder="Search AEP.com" type="text" aria-label="Search AEP.com">
+        <input class="form-control search-input" id="siteSearchText" name="siteSearchText" placeholder="Search AEP.com" type="text">
     </div>
